Updated with a description of the source data.

--- a/Seg_Four_Machine Learning Model.ipynb
+++ b/Seg_Four_Machine Learning Model.ipynb
@@ -32,6 +32,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Source Data\n",
+    "\n",
+    "1) US Flight Data for the month of Jan 2019 and Jan 2020: https://www.kaggle.com/divyansh22/flight-delay-prediction\n",
+    "\n",
+    "2) Airport Details: http://www.airportcodes.org/\n",
+    "\n",
+    "3) Weather Data: https://www.worldweatheronline.com/developer/api/historical-weather-api.aspx\n",
+    "\n",
+    "Thes sources of data were accessed and prepared in the other notebooks in this same project."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Preliminary data preprocessing\n",
     "Original Dataset was provided by a Kaggle Project.  For the intial analysis of the dataset the information was imported to a local directory and then imported read into this jupyter notebook.  All preprocessign steps were executed in the jupyter notebook named -----.  \n",
     "\n",
@@ -2588,7 +2603,7 @@
     "\n",
     "3) F-Measure (also known as F1-Score) is a measure that combines precision and recall to balance the unique attributes of both.  \n",
     "\n",
-    "4) Accuracy is the number of true positives and negatives over the total population.  This can be very inaccurate in unbalanced datasets "
+    "4) Accuracy is the number of true positives and negatives over the total population.  This can be very inaccurate in unbalanced datasets."
    ]
   },
   {
