organization and comments for weather data clean

--- a/Database/weather/airport_weather.ipynb
+++ b/Database/weather/airport_weather.ipynb
@@ -6580,6 +6580,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Push the dataframe to a csv file.\n",
     "clean_complete_flight_2020_df.to_csv(\"../../Database/clean_2020_flight_data.csv\", index=False)"
    ]
   },
@@ -6622,6 +6623,7 @@
     }
    ],
    "source": [
+    "#Check data types for the dataframe for refrence when creating the ERD\n",
     "clean_complete_flight_2020_df.dtypes"
    ]
   },
